kubernetes/skywalker/database/postgres/test-cluster.virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: test-cluster

spec:
  gateways:
    - cluster/feldman-in
  hosts:
    - test-cluster.feldman.in
  tcp:
    - match:
        - port: 5432
      route:
        - destination:
            host: test-cluster-rw
            port:
              number: 5432
